# Juce-Project-Generator

./: .cursorrules  .gitignore  PASSATION.md  README.md  configure-platform.py  generate-new-juce-project.py  generate-new-project.py  generator-config.py  generator-configuration.py  project-config.cmake  project-configuration.cmake  user-config.py
Documentation/: Guide-Tests-Generateur.md  Handover-Universal-Binary.md  Plan-Refonte-Copie-Artefacts.md
Documentation/Development/Plans/2026/03/: 2026-03-13-Refonte-Copie-Artefacts.plan.md
Generator/: __init__.py  config-loader.py  file-generator.py  input-collector.py  path-error-messages.py  path-validation.py  platform-info.py  plugin-categories.py  project-config-parser.py  project-data.py  success-display.py  summary-display.py  template-loader.py  template-renderer.py  ui-constants.py  utils.py
Templates/: CMakeLists.txt  README.md  project-configuration.cmake
Templates/Source/: PluginEditor.cpp  PluginFactory.cpp  PluginProcessor.cpp
templates/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  project-config.cmake
templates/Source/: PluginEditor.h  PluginProcessor.h
